--- a/Agenda v2/app/src/main/res/values/strings.xml
+++ b/Agenda v2/app/src/main/res/values/strings.xml
@@ -44,7 +44,8 @@
     <string name="mail">E-mail</string>
     <string name="forgot_psw">¿Olvidaste tu contraseña?</string>
     <string name="wrong">Credenciales incorrectas</string>
-
+    <string name="addUser">Agregar usuario</string>
+    <string name="listaFirebase">Lista por Firebase</string>
     <!-- Strings de la activity de Settings -->
     <string name="titulo_actividad_configuracion">Configuración</string>
     <string name="titulo_actividad_cuenta">Perfil</string>
